--- a/index.html
+++ b/index.html
@@ -1,1 +1,25 @@
-Is this thing on?
+<!DOCTYPE html>
+<html>   
+    <head>
+        <meta charset="utf-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+        <title>Repo to Github Pages</title>
+        <link rel="stylesheet" href="main.css">
+    </head>
+    <body>        
+        <h2>Repository to Github Pages</h2>  
+        <p>A simple set of instructions for future me:</p>       
+        <ul>
+        <li>Create new repository</li>
+        <li>Clone to desktop</li>
+        <li>Open terminal and navigate to cd /Users/.../projectfolder</li>
+        <li>Create a gh-pages branch by typing this in terminal:<br><code>git checkout --orphan gh-pages</code></li>
+        <li>It should say:<br><code>Switched to a new branch 'gh-pages'</code></li>
+        <li>In repository settings, change default branch from master to gh-pages</li>
+        <li>Create index.html in the project folder</li>
+        <li>Commit and push changes</li>
+        <li>Test it at jamaps.github.io/reponame</li>
+        <p>That's It</p>    
+        </ul>
+    </body>
+</html>
