--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <li>In repository settings, change default branch from master to gh-pages</li>
         <li>Create index.html in the project folder</li>
         <li>Commit and push changes</li>
-        <li>Test it at jamaps.github.io/reponame</li>
+        <li>Test it at username.github.io/reponame</li>
         </ul>
     </body>
 </html>
