--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
         <li>Create index.html in the project folder</li>
         <li>Commit and push changes</li>
         <li>Test it at username.github.io/reponame</li>
+        <li>It also works for other files in the repo like username.github.io/reponame/filename</li>
         </ul>
     </body>
 </html>
